--- a/scss/comps/_content-boxes.scss
+++ b/scss/comps/_content-boxes.scss
@@ -26,8 +26,6 @@
       justify-content: center;
     }
 
-    padding: 0 15px;
-
     &--header{
       font-size:1rem;
       font-weight: 400;
@@ -37,6 +35,7 @@
     }
 
     &--content{
+      margin: 0 auto;
       @include flex($dir: column){
         justify-content: space-around;
       }
@@ -50,7 +49,11 @@
 
       padding: 25px 10px 25px;
 
-      
+      border-bottom: 1px solid color(white, x-dark);
+
+      &:last-of-type{
+        border: 0;
+      }
 
       &--picture {
         @include picture;
